--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="teal">#04ffff</color>
     <color name="orange">#ffbe35</color>
+    <color name="white">#ffffff</color>
 </resources>
