--- a/wear/src/main/res/values/styles.xml
+++ b/wear/src/main/res/values/styles.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="WatchLayer">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-    </style>
-
-    <style name="WatchLayer.Hand">
+    <style name="GearsWatchLayer.Hand">
         <item name="android:scaleType">fitXY</item>
     </style>
 </resources>
