--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="teal">#04ffff</color>
+    <color name="teal_shadow">#bf41afb2</color>
     <color name="orange">#ffbe35</color>
+    <color name="orange_shadow">#bfff9000</color>
     <color name="white">#ffffff</color>
 </resources>
