--- a/wear/src/main/res/layout/watchface.xml
+++ b/wear/src/main/res/layout/watchface.xml
@@ -5,18 +5,4 @@
     android:id="@+id/watchface"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WatchfaceActivity">
-
-    <ImageView style="@style/GearsWatchLayer"
-        android:id="@+id/face"/>
-
-    <ImageView style="@style/GearsWatchLayer.Hand"
-        android:id="@+id/hand_hour"/>
-
-    <ImageView style="@style/GearsWatchLayer.Hand"
-        android:id="@+id/hand_minute"/>
-
-    <ImageView style="@style/GearsWatchLayer.Hand"
-        android:id="@+id/hand_second"/>
-
-</com.twotoasters.chron.widget.Watchface>
+    tools:context=".WatchfaceActivity"/>
