--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="second_center_offset">40.5dp</dimen><!-- dist to second container center from watch center on 186.666 x 186.666 dp square -->
     <dimen name="date_center_offset">41dp</dimen><!-- dist to date container center from watch center on 186.666 x 186.666 dp square -->
     <dimen name="text_shadow_radius">3dp</dimen>
+    <dimen name="ring_shadow_radius">2dp</dimen>
 </resources>
