--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="animation_range">60dp</dimen>
     <dimen name="wearable_list_item_height">65dp</dimen>
-    <dimen name="default_settings_circle_radius">37dp</dimen>
-    <dimen name="selected_settings_circle_radius">50dp</dimen>
+    <dimen name="settings_circle_size">36dp</dimen>
+    <dimen name="settings_circle_radius">18dp</dimen>
+    <dimen name="settings_circle_margin_horizontal">18dp</dimen>
 </resources>
